# ze

./: .dockerignore  .env.example  .gitignore  .npmrc  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  VISION.md  docker-compose.yml  fly.toml  package.json  pyproject.toml  tmp
apps/ze-api/: .env.example  Dockerfile  README.md  alembic.ini  fly.toml  pyproject.toml
apps/ze-api/config/: config.yaml  persona.yaml
apps/ze-api/migrations/: env.py
apps/ze-api/scripts/: generate_ze_api_key.py  google_auth.py  reset_personal_state.py
apps/ze-api/tests/: conftest.py  test_agent_wiring.py  test_errors.py  test_logging.py  test_settings.py  test_signal_contract.py
apps/ze-api/ze_api/: bootstrap.py  cli.py  compose.py  container.py  db.py  errors.py  logging.py  migrate.py  openapi_export.py  plugin_routes.py  settings.py  testing.py  webhook.py
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/config/: capabilities.yaml  models.yaml
backend/config/agents/: calendar.yaml  companion.yaml  email.yaml  research.yaml  workflow.yaml
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py  002_checkpointer.py
backend/tests/: conftest.py  test_embeddings.py  test_errors.py  test_logging.py  test_settings.py
backend/tests/agents/: test_registry.py
backend/tests/api/: test_ws.py
backend/tests/capability/: test_gate.py
backend/tests/memory/: test_store.py
backend/tests/openrouter/: test_client.py
backend/tests/orchestration/: test_edges.py  test_nodes.py
backend/tests/routing/: test_haiku_fallback.py  test_router.py
backend/ze/: db.py  embeddings.py  errors.py  logging.py  settings.py
backend/ze/agents/: base.py  registry.py  types.py
backend/ze/api/: app.py  dependencies.py  schemas.py  ws.py
backend/ze/capability/: gate.py  types.py
backend/ze/memory/: store.py  types.py
backend/ze/openrouter/: client.py
backend/ze/orchestration/: edges.py  graph.py  state.py
backend/ze/routing/: haiku_fallback.py  router.py  types.py
core/ze-agents/: README.md  pyproject.toml
core/ze-agents/tests/: test_imports.py  test_model_resolution.py
core/ze-agents/ze_agents/: base_agent.py  bootstrap.py  client.py  db.py  defaults.py  delegate.py  errors.py  hooks.py  integration.py  logging.py  model_resolution.py  nli.py  nli_tools.py  plugin.py  registry.py  settings.py  signals.py  tasks.py  tool.py  tool_cap_hook.py  types.py
core/ze-automation/: pyproject.toml
core/ze-automation/ze_automation/: __init__.py  bootstrap.py  rest.py
core/ze-browser/: README.md  pyproject.toml
core/ze-browser/tests/: test_browser_client.py
core/ze-browser/ze_browser/: __init__.py  client.py  tool.py  types.py
core/ze-communication/: pyproject.toml
core/ze-communication/tests/: test_registry.py
core/ze-communication/ze_communication/: __init__.py  channel.py  registry.py  types.py  webhook.py
core/ze-components/: README.md  pyproject.toml
core/ze-components/tests/: test_context.py  test_hook.py  test_schema.py  test_tools.py  test_types.py
core/ze-components/ze_components/: __init__.py  context.py  hook.py  schema.py  serialize.py  tools.py  types.py
core/ze-core/: README.md  VISION_EVOLUTION.md  pyproject.toml
core/ze-core/tests/: conftest.py  test_checkpoint_serde.py  test_container.py  test_container_invoke.py  test_conversation_turn.py  test_embeddings.py  test_memory_policy_registry.py  test_nli.py
core/ze-core/ze_core/: __init__.py  bootstrap.py  checkpoint_serde.py  container.py  conversation.py  db.py  defaults.py  embeddings.py  errors.py  migrate.py  nli.py  plugin.py
core/ze-correlation/: README.md  pyproject.toml
core/ze-correlation/tests/: test_engine.py  test_push.py
core/ze-correlation/ze_correlation/: __init__.py  bootstrap.py  engine.py  job.py  migrate.py  prompts.py  push.py  store.py  types.py
core/ze-data/: README.md  pyproject.toml
core/ze-data/ze_data/: __init__.py  domain.py  errors.py
core/ze-eval/: README.md  pyproject.toml
core/ze-eval/tests/: test_scenario.py
core/ze-eval/ze_eval/: __init__.py  client.py  judge.py  metrics.py  report.py  runner.py  scenario.py  scoring.py  server.py  types.py  verifier.py
core/ze-ingestion/: README.md  pyproject.toml
core/ze-ingestion/tests/: test_classifier.py  test_llm_extractor.py  test_pipeline.py  test_processors.py  test_sink.py  test_store.py
core/ze-ingestion/ze_ingestion/: __init__.py  agent.py  bootstrap.py  classifier.py  errors.py  pipeline.py  sink.py  store.py  types.py
core/ze-logging/: pyproject.toml
core/ze-logging/tests/: test_logging.py
core/ze-logging/ze_logging/: __init__.py
core/ze-memory/: README.md  pyproject.toml
core/ze-memory/tests/: test_admin_graph.py  test_composite.py  test_consolidator_nli.py  test_entity_anchor.py  test_extractor.py  test_graph_projection.py  test_graph_store.py  test_live_rerank.py  test_memory_profile.py  test_nli.py  test_relevance_config.py  test_relevance_floor.py  test_retrieval_cache.py  test_retrieval_rerank.py  test_retrieve_rerank.py  test_salience.py  test_search_session_summaries_nli.py  test_session_summary.py  test_signal_substrate.py  test_store_nli.py  test_store_writes.py
core/ze-memory/ze_memory/: __init__.py  admin.py  admission.py  bootstrap.py  composite.py  consolidation_store.py  consolidator.py  defaults.py  (+18 more)
core/ze-notifications/: README.md  pyproject.toml
core/ze-onboarding/: README.md  pyproject.toml
core/ze-plugin/: README.md  pyproject.toml
core/ze-proactive/: README.md  pyproject.toml
core/ze-sdk/: README.md  pyproject.toml
core/ze-seed/: pyproject.toml
core/ze-worldstate/: pyproject.toml
integrations/ze-google/: README.md  pyproject.toml
integrations/ze-trading212/: pyproject.toml
integrations/ze-yt/: pyproject.toml
plugins/ze-calendar/: README.md  pyproject.toml
plugins/ze-email/: README.md  pyproject.toml
plugins/ze-finance/: README.md  pyproject.toml
plugins/ze-messenger/: pyproject.toml
plugins/ze-news/: README.md  pyproject.toml
plugins/ze-personal/: README.md  pyproject.toml
(+1808 files in other folders)
