[project]
name = "ze"
version = "0.1.0"
description = "Ze personal AI assistant"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx[http2]>=0.28",
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    "asyncpg>=0.30",
    "psycopg[binary,pool]>=3.2",   # required by langgraph-checkpoint-postgres
    "pgvector>=0.3",
    "torch>=2.1,<2.6",                  # 2.6+ drops macOS 13 arm64 wheel support
    "sentence-transformers>=3.0,<3.3",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "pyyaml>=6.0",
    "numpy>=2.0",
    "tavily-python>=0.5",
    "alembic>=1.14",
    "sqlalchemy>=2.0",             # alembic dependency; not used for ORM
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "anyio[trio]>=4.7",
    "psycopg2-binary>=2.9",        # sync driver for alembic migrations
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests that load the embedding model (deselect with -m 'not slow')",
    "integration: marks tests that require a running database",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ze"]
