[project]
name = "ze-api"
version = "0.1.0"
description = "Ze personal AI assistant — HTTP/WebSocket API deployment unit"
requires-python = ">=3.12"
dependencies = [
    "ze-core",
    "ze-memory",
    "ze-personal",
    "ze-email",
    "ze-prospecting",
    "ze-browser",
    "ze-news",
    "ze-notifications",
    "ze-components",
    "ze-calendar",
    "ze-google",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx[http2]>=0.28",
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    "asyncpg>=0.30",
    "psycopg[binary,pool]>=3.2",   # required by langgraph-checkpoint-postgres
    "pgvector>=0.3",
    "torch>=2.1,<2.6",                  # 2.6+ drops macOS 13 arm64 wheel support
    "sentence-transformers>=3.0,<3.3",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "pyyaml>=6.0",
    "numpy>=2.0",
    "alembic>=1.14",
    "websockets>=13.0",
    "sqlalchemy>=2.0",             # alembic dependency; not used for ORM
    "openrouter>=0.9.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "anyio[trio]>=4.7",
    "psycopg2-binary>=2.9",        # sync driver for alembic migrations
    "ruff>=0.8",
    "mcp>=1.0",
]

[tool.uv.sources]
ze-core          = { workspace = true }
ze-memory        = { workspace = true }
ze-personal      = { workspace = true }
ze-email         = { workspace = true }
ze-prospecting   = { workspace = true }
ze-browser       = { workspace = true }
ze-news          = { workspace = true }
ze-notifications = { workspace = true }
ze-components    = { workspace = true }
ze-calendar      = { workspace = true }
ze-google        = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests that load the embedding model (deselect with -m 'not slow')",
    "integration: marks tests that require a running database",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ze_api"]
