[project]
name = "ze-api"
version = "0.1.0"
description = "Ze personal AI assistant — HTTP/WebSocket API deployment unit"
requires-python = ">=3.12"
dependencies = [
    "ze-core",
    "ze-automation",
    "ze-data",
    "ze-ingestion",
    "ze-yt",
    "ze-logging",
    "ze-memory",
    "ze-correlation",
    "ze-personal",
    "ze-messenger",
    "ze-prospecting",
    "ze-browser",
    "ze-news",
    "ze-finance",
    "ze-notifications",
    "ze-components",
    "ze-onboarding",
    "ze-calendar",
    "ze-seed",
    "ze-google",
    "fastapi==0.136.3",
    "uvicorn[standard]==0.48.0",
    "httpx[http2]==0.28.1",
    "langgraph==1.2.2",
    "langgraph-checkpoint-postgres==3.1.0",
    "asyncpg==0.31.0",
    "psycopg[binary,pool]==3.3.4",   # required by langgraph-checkpoint-postgres
    "pgvector==0.4.2",
    "torch==2.5.1",                  # 2.6+ drops macOS 13 arm64 wheel support
    "sentence-transformers==3.2.1",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "pyyaml==6.0.3",
    "numpy==2.4.6",
    "alembic==1.18.4",
    "websockets==16.0",
    "sqlalchemy==2.0.50",             # alembic dependency; not used for ORM
    "openrouter==0.9.1",
    "cachetools==7.1.4",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-mock==3.15.1",
    "anyio[trio]==4.13.0",
    "psycopg2-binary==2.9.12",        # sync driver for alembic migrations
    "ruff==0.15.14",
    "mcp==1.27.1",
    "httpx2==2.5.0",                # starlette TestClient (replaces deprecated httpx fallback)
]

[tool.uv.sources]
ze-core          = { workspace = true }
ze-automation    = { workspace = true }
ze-data          = { workspace = true }
ze-ingestion     = { workspace = true }
ze-yt            = { workspace = true }
ze-logging       = { workspace = true }
ze-memory        = { workspace = true }
ze-correlation   = { workspace = true }
ze-personal      = { workspace = true }
ze-messenger     = { workspace = true }
ze-prospecting   = { workspace = true }
ze-browser       = { workspace = true }
ze-news          = { workspace = true }
ze-finance       = { workspace = true }
ze-notifications = { workspace = true }
ze-components    = { workspace = true }
ze-onboarding    = { workspace = true }
ze-calendar      = { workspace = true }
ze-seed          = { workspace = true }
ze-google        = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests that load the embedding model (deselect with -m 'not slow')",
    "integration: marks tests that require a running database",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ze_api"]
