[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ze-agents"
version = "0.1.0"
description = "Ze developer API — BaseAgent, @agent, @tool, shared types"
requires-python = ">=3.11"
dependencies = [
    "ze-logging",
    "ze-onboarding",
    "typing_extensions>=4.0",
    "pyyaml>=6.0",
]

[tool.uv.sources]
ze-logging = { workspace = true }
ze-onboarding = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["ze_agents"]
include = ["ze_agents/py.typed"]
