[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ze-automation"
version = "0.1.0"
description = "Shared automation substrate for Ze — goals, workflows, store protocols, runtime contracts"
requires-python = ">=3.11"
dependencies = [
    "ze-agents",
    "ze-proactive",
    "ze-memory",
    "asyncpg>=0.30",
    "apscheduler>=3.10",
]

[tool.uv.sources]
ze-agents    = { workspace = true }
ze-proactive = { workspace = true }
ze-memory    = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["ze_automation"]
