[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ze-browser"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx==0.28.1",
    "ze-core",
]

[tool.uv.sources]
ze-core = { workspace = true }

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["ze_browser"]
