[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ze-communication"
version = "0.1.0"
description = "Channel contract — types, outbound/inbound ABCs, registry"
requires-python = ">=3.12"
dependencies = [
    "ze-agents",
]

[tool.uv.sources]
ze-agents = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["ze_communication"]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "ruff==0.15.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
