[project]
name = "ze-components"
version = "0.1.0"
description = "Ze component descriptor types and render tools"
requires-python = ">=3.12"
dependencies = [
    "ze-agents",
]

[tool.uv.sources]
ze-agents = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ze_components"]
