[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ze-core"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ze-agents",
    "ze-communication",
    "ze-logging",
    "ze-plugin",
    "ze-components",
    "ze-data",
    "ze-memory",
    "openrouter==0.9.1",
    "numpy==2.4.6",
    "sentence-transformers==3.2.1",
    "scipy==1.17.1",
]

[project.optional-dependencies]
# pip install 'ze-core[migrations]'  — required to run `python -m ze_core.migrate`
# or to use ZC_AUTO_MIGRATE=true
migrations = [
    "alembic==1.18.4",
    "psycopg2-binary==2.9.12",
    "sqlalchemy==2.0.50",
]
# pip install 'ze-core[sqlite]'  — SQLite storage backend (no Postgres required)
sqlite = [
    "aiosqlite==0.22.1",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-mock==3.15.1",
    "anyio[trio]==4.13.0",
    "aiosqlite==0.22.1",
    "ruff==0.15.14",
    "pyyaml==6.0.3",
    "ze-personal",
    "ze-calendar",
    "ze-messenger",
    "ze-prospecting",
    "ze-browser",
    "ze-ingestion",
    "ze-automation",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests that load ML models (deselect with -m 'not slow')",
]

[tool.uv.sources]
ze-agents        = { workspace = true }
ze-communication = { workspace = true }
ze-logging       = { workspace = true }
ze-plugin        = { workspace = true }
ze-components = { workspace = true }
ze-data = { workspace = true }
ze-memory = { workspace = true }
ze-personal = { workspace = true }
ze-calendar = { workspace = true }
ze-messenger = { workspace = true }
ze-prospecting = { workspace = true }
ze-browser = { workspace = true }
ze-ingestion = { workspace = true }
ze-automation = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["ze_core"]
include = ["ze_core/py.typed"]
