[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ze-data"
version = "0.1.0"
description = "Ze data management — DataDomain descriptor and DataPortabilityService"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "ruff==0.15.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["ze_data"]
