[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ze-eval"
version = "0.1.0"
description = "Eval infrastructure for Ze — runner, judge, verifier, MCP server"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "asyncpg>=0.29",
    "pyyaml>=6.0",
    "mcp>=1.0",
    "langchain-mcp-adapters>=0.0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["ze_eval"]
