[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ze-eval"
version = "0.1.0"
description = "Eval infrastructure for Ze — runner, judge, verifier, MCP server"
requires-python = ">=3.11"
dependencies = [
    "httpx==0.28.1",
    "asyncpg==0.31.0",
    "pyyaml==6.0.3",
    "mcp==1.27.1",
    "langchain-mcp-adapters==0.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["ze_eval"]
