[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ze-ingestion"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ze-agents",
    "ze-logging",
    "ze-memory",
    "ze-browser",
    "asyncpg==0.31.0",
    "httpx==0.28.1",
    "beautifulsoup4==4.15.0",
    "pypdf==6.13.3",
]

[project.optional-dependencies]
migrations = [
    "alembic==1.18.4",
    "psycopg2-binary==2.9.12",
    "sqlalchemy==2.0.50",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-mock==3.15.1",
    "ruff==0.15.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.sources]
ze-agents = { workspace = true }
ze-logging = { workspace = true }
ze-memory = { workspace = true }
ze-browser = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["ze_ingestion"]
include = ["ze_ingestion/py.typed", "ze_ingestion/locales/*.yaml"]
