[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ze-logging"
version = "0.1.0"
description = "Ze structured logging — structlog configuration and context binding"
requires-python = ">=3.11"
dependencies = [
    "structlog>=24.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["ze_logging"]
