[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ze-logging"
version = "0.1.0"
description = "Ze structured logging — structlog configuration and context binding"
requires-python = ">=3.11"
dependencies = [
    "structlog==25.5.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "ruff==0.15.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["ze_logging"]
