[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ze-memory"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ze-agents",
    "ze-logging",
    "asyncpg>=0.29",
    "numpy>=2.0",
]

[project.optional-dependencies]
migrations = [
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
]
sqlite = [
    "aiosqlite>=0.19",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests that load ML models (deselect with -m 'not slow')",
]

[tool.uv.sources]
ze-agents = { workspace = true }
ze-logging = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["ze_memory"]
include = ["ze_memory/py.typed"]
