[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ze-memory"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ze-agents",
    "ze-logging",
    "asyncpg==0.31.0",
    "numpy==2.4.6",
]

[project.optional-dependencies]
migrations = [
    "alembic==1.18.4",
    "psycopg2-binary==2.9.12",
    "sqlalchemy==2.0.50",
]
sqlite = [
    "aiosqlite==0.22.1",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-mock==3.15.1",
    "ruff==0.15.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests that load ML models (deselect with -m 'not slow')",
]

[tool.uv.sources]
ze-agents = { workspace = true }
ze-logging = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["ze_memory"]
include = ["ze_memory/py.typed"]
