[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ze-notifications"
version = "0.1.0"
description = "Ze notifications package — Notifier protocol and NtfyNotifier implementation"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.13.5",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-mock==3.15.1",
    "ruff==0.15.14",
    "aioresponses==0.7.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["ze_notifications"]
