[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ze-onboarding"
version = "0.1.0"
description = "Ze onboarding coordinator, provider contracts, and reset domain types"
requires-python = ">=3.11"
dependencies = [
    "ze-agents",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "ruff==0.15.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.sources]
ze-agents = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["ze_onboarding"]
include = ["ze_onboarding/py.typed"]
