[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ze-plugin"
version = "0.1.0"
description = "Ze plugin extension framework — ZePlugin, channels, signals"
requires-python = ">=3.11"
dependencies = [
    "ze-agents",
    "ze-logging",
    "ze-data",
    "pyyaml>=6.0",
    "fastapi>=0.115",
]

[tool.uv.sources]
ze-agents = { workspace = true }
ze-logging = { workspace = true }
ze-data = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["ze_plugin"]
include = ["ze_plugin/py.typed"]
