[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ze-proactive"
version = "0.1.0"
description = "Ze job scheduling and notification framework"
requires-python = ">=3.11"
dependencies = [
    "ze-agents",
    "asyncpg>=0.29",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.sources]
ze-agents = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["ze_proactive"]
include = ["ze_proactive/py.typed"]
