[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ze-proactive"
version = "0.1.0"
description = "Ze job scheduling and notification framework"
requires-python = ">=3.11"
dependencies = [
    "ze-agents",
    "ze-logging",
    "asyncpg==0.31.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-mock==3.15.1",
    "ruff==0.15.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.sources]
ze-agents = { workspace = true }
ze-logging = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["ze_proactive"]
include = ["ze_proactive/py.typed"]
