[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ze-sdk"
version = "0.1.0"
description = "Public API surface for Ze plugin development"
requires-python = ">=3.11"
dependencies = [
    "ze-agents",
    "ze-data",
    "ze-logging",
    "ze-plugin",
    "ze-proactive",
    "ze-memory",
    "ze-onboarding",
    "ze-automation",
]

[tool.uv.sources]
ze-agents     = { workspace = true }
ze-data       = { workspace = true }
ze-logging    = { workspace = true }
ze-plugin     = { workspace = true }
ze-proactive  = { workspace = true }
ze-memory     = { workspace = true }
ze-onboarding = { workspace = true }
ze-automation = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["ze_sdk"]
include = ["ze_sdk/py.typed"]
