[project]
name = "ze-google"
version = "0.1.0"
description = "Shared Google OAuth2 credentials for Ze packages."
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ze_google"]
