[project]
name = "ze-google"
version = "0.1.0"
description = "Shared Google OAuth2 credentials and Gmail channel for Ze packages."
requires-python = ">=3.12"
dependencies = [
    "ze-communication",
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "pydantic-settings>=2.0",
    "structlog>=24.4",
]

[tool.uv.sources]
ze-communication = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ze_google"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
