[project]
name = "ze-trading212"
version = "0.1.0"
description = "Trading212 REST API client for Ze packages."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic-settings>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ze_trading212"]
