[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ze-yt"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ze-ingestion",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "ruff==0.15.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.sources]
ze-ingestion = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["ze_yt"]
