[project]
name = "ze-calendar"
version = "0.1.0"
description = "Calendar, reminders, and timezone domain logic for Ze."
requires-python = ">=3.12"
dependencies = [
    "ze-core",
    "ze-google",
    "ze-personal",
    "apscheduler>=3.10",
    "asyncpg>=0.30",
    "structlog>=24.4",
]

[tool.uv.sources]
ze-core     = { workspace = true }
ze-google   = { workspace = true }
ze-personal = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ze_calendar"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
