[project]
name = "ze-calendar"
version = "0.1.0"
description = "Calendar, reminders, and timezone domain logic for Ze."
requires-python = ">=3.12"
dependencies = [
    "ze-sdk",
    "ze-google",
    "ze-personal",
    "apscheduler>=3.10",
    "asyncpg>=0.30",
    "structlog>=24.4",
]

[tool.uv.sources]
ze-sdk      = { workspace = true }
ze-google   = { workspace = true }
ze-personal = { workspace = true }
ze-automation = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.8",
    "pyyaml>=6.0",
    "ze-automation",
    "ze-google",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."ze.plugins"]
ze_calendar = "ze_calendar.plugin:CalendarPlugin"

[tool.hatch.build.targets.wheel]
packages = ["ze_calendar"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
