[project]
name = "ze-calendar"
version = "0.1.0"
description = "Calendar, reminders, and timezone domain logic for Ze."
requires-python = ">=3.12"
dependencies = [
    "ze-sdk",
    "ze-google",
    "ze-personal",
    "ze-components",
    "ze-seed",
    "apscheduler==3.11.2",
    "asyncpg==0.31.0",
    "structlog==25.5.0",
    "fastapi==0.136.3",
]

[tool.uv.sources]
ze-sdk      = { workspace = true }
ze-google   = { workspace = true }
ze-personal = { workspace = true }
ze-automation = { workspace = true }
ze-components = { workspace = true }
ze-seed = { workspace = true }

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-mock==3.15.1",
    "httpx==0.28.1",
    "ruff==0.15.14",
    "pyyaml==6.0.3",
    "ze-automation",
    "ze-google",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."ze.plugins"]
ze_calendar = "ze_calendar.plugin:CalendarPlugin"

[tool.hatch.build.targets.wheel]
packages = ["ze_calendar"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
