[project]
name = "ze-email"
version = "0.1.0"
description = "Gmail channel and email agent for Ze."
requires-python = ">=3.12"
dependencies = [
    "ze-core",
    "ze-google",
    "ze-personal",
    "structlog>=24.4",
]

[tool.uv.sources]
ze-core     = { workspace = true }
ze-google   = { workspace = true }
ze-personal = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ze_email"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
