[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ze-finance"
version = "0.1.0"
description = "Ze finance plugin — portfolio, transactions, spending, and data source ingestion"
requires-python = ">=3.11"
dependencies = [
    "ze-sdk",
    "ze-ingestion",
    "ze-trading212",
    "asyncpg>=0.30",
    "httpx>=0.28",
]

[tool.uv.sources]
ze-sdk        = { workspace = true }
ze-ingestion  = { workspace = true }
ze-trading212 = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.entry-points."ze.plugins"]
ze_finance = "ze_finance.plugin:FinancePlugin"

[tool.hatch.build.targets.wheel]
packages = ["ze_finance"]
